[gd_scene load_steps=5 format=2]

[ext_resource path="res://View/Screens_Randy/ManageQuestions.gd" type="Script" id=1]
[ext_resource path="res://Model/Labels/Edit.tscn" type="PackedScene" id=2]
[ext_resource path="res://View/basicMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Model/Labels/Add.tscn" type="PackedScene" id=4]

[node name="World" instance=ExtResource( 3 )]
script = ExtResource( 1 )

[node name="Header" parent="TemplateScreen" index="3"]
text = "MANAGE QUESTIONS"

[node name="PlayBoard" parent="." index="1"]
margin_right = 288.0
margin_bottom = -59.0

[node name="MarginContainer" type="MarginContainer" parent="PlayBoard" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayBoard/MarginContainer" index="0"]
margin_left = 20.0
margin_right = 556.0
margin_bottom = 352.0
custom_constants/separation = 100
alignment = 1

[node name="AddButton" parent="PlayBoard/MarginContainer/VBoxContainer" index="0" instance=ExtResource( 4 )]
margin_top = 66.0
margin_right = 536.0
margin_bottom = 126.0

[node name="Line2D" type="Line2D" parent="PlayBoard/MarginContainer/VBoxContainer" index="1"]
show_behind_parent = true
points = PoolVector2Array( 178.642, 176, 358.26, 176 )
width = 4.0
default_color = Color( 0.917647, 0.913725, 0.913725, 1 )
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="EditButton" parent="PlayBoard/MarginContainer/VBoxContainer" index="2" instance=ExtResource( 2 )]
margin_top = 226.0
margin_right = 536.0
margin_bottom = 286.0
[connection signal="pressed" from="PlayBoard/MarginContainer/VBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="PlayBoard/MarginContainer/VBoxContainer/EditButton" to="." method="_on_EditButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
